--- a/jamie.create_vhost/templates/index.html.j2
+++ b/jamie.create_vhost/templates/index.html.j2
@@ -1,3 +1,4 @@
-
+{{ ansible_hostname }} served this responce. 
 {{ vhost_webserver_address}} is up and running on port {{ vhost_webserver_port }}
+
 
